--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -412,6 +412,7 @@ jobs:
         env:
           OS_NAME: ${{ runner.os }}
         shell: bash
+        continue-on-error: true
         run: |
           cargo make disk-usage-bench
 
