Fix type issues.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -177,9 +177,10 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install Qt
-        uses: jurplel/install-qt-action@v3
+        uses: jurplel/install-qt-action@910f37ee23653fd4b243fe5c7f81ff26a8a6a64e
         with:
           version: '6.3.1'
+          setup-python: false
 
       - name: Run Checks
         run: |
