Explicitly set the font for the SwiftNav style
This explicitly sets the font we wish to use for the SwiftNav style and
the fallback Material style. Without this, it didn't seem to fall back
to the [Default] font. Not sure why - I may further investigate that.

--- a/resources/qtquickcontrols2.conf
+++ b/resources/qtquickcontrols2.conf
@@ -2,11 +2,17 @@
 Style=SwiftNav
 FallbackStyle=Material
 
+[SwiftNav\Font]
+Family=Roboto Condensed
+PixelSize=9
+
 [Material]
 Variant=Dense
 Accent="#FF8300"
 # Theme=Light
 # Primary=<Color like BlueGrey>
+Font\Family=Roboto Condensed
+Font\PixelSize=9
 
 [Default]
 Font\Family=Roboto Condensed
