Make profiling QML not require code modification
This provides a -qmldebug command line option to the toolbox that sets
up the QML debugger.

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ installers/Linux/*.deb
 installers/Windows/NSIS/*
 !installers/Windows/NSIS/*.zip
 /.qt_for_python
+*.pyproject.user
+*.pyproject.bkup
