Install libssl-dev.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,7 @@ jobs:
         shell: bash
         run: |
           if [ "$RUNNER_OS" == "Linux" ]; then
-              sudo apt-get update && sudo apt-get install -y capnproto libudev-dev
+              sudo apt-get update && sudo apt-get install -y capnproto libudev-dev libssl-dev
           elif [ "$RUNNER_OS" == "macOS" ]; then
               brew install capnp llvm
           elif [ "$RUNNER_OS" == "Windows" ]; then
@@ -157,7 +157,7 @@ jobs:
 
       - name: Install Dependencies.
         run: |
-          sudo apt-get update && sudo apt-get install -y capnproto libudev-dev
+          sudo apt-get update && sudo apt-get install -y capnproto libudev-dev libssl-dev
 
       - name: Cache pip
         uses: actions/cache@v2
@@ -264,7 +264,8 @@ jobs:
                 ruby-dev \
                 rubygems \
                 build-essential \
-                libudev-dev
+                libudev-dev \
+                libssl-dev
               sudo gem install --no-document fpm
           elif [ "$RUNNER_OS" == "macOS" ]; then
               brew install capnp llvm create-dmg
