Cherry-pick bd00f7d 87b29d6 43208dc 88ae5b3 (#746)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,7 @@ jobs:
         shell: bash
         run: |
           if [ "$RUNNER_OS" == "Linux" ]; then
-              sudo apt-get update && sudo apt-get install -y capnproto libudev-dev
+              sudo apt-get update && sudo apt-get install -y capnproto libudev-dev libssl-dev
           elif [ "$RUNNER_OS" == "macOS" ]; then
               brew install capnp llvm
           elif [ "$RUNNER_OS" == "Windows" ]; then
@@ -158,7 +158,7 @@ jobs:
 
       - name: Install Dependencies.
         run: |
-          sudo apt-get update && sudo apt-get install -y capnproto libudev-dev
+          sudo apt-get update && sudo apt-get install -y capnproto libudev-dev libssl-dev
 
       - name: Cache pip
         uses: actions/cache@v2
@@ -253,7 +253,9 @@ jobs:
                 ruby-dev \
                 rubygems \
                 build-essential \
-                libudev-dev
+                libudev-dev \
+                libssl-dev
+              sudo gem install public_suffix -v 4.0.7  # This is a fix for U18.
               sudo gem install --no-document fpm
           elif [ "$RUNNER_OS" == "macOS" ]; then
               brew install capnp llvm create-dmg
