--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ test = [
   "py2many >=0.3",
   "types-requests ~= 2.28.11",
 ]
+ssh-tunnel = ["sshtunnel >= 0.4.0"]
 
 [build-system]
 requires = [
