--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: swift-nav/toolbox-backend-ci
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_TOKEN }}
           path: "${{ github.workspace }}/benchmark-backend-ci"
           ref: "main"
 
