--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ on:
 env:
   PIP_CACHE_DIR: ~/.cache/pip
   RUST_CACHE_DIRS: "~/.cargo/registry\n~/.cargo/git\ntarget\n"
-  LIBCLANG_PATH: "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Tools/Llvm/x64/bin"
+  LIBCLANG_PATH_WIN: "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Tools/Llvm/x64/bin"
   CODE_SIGNER_PATH_WIN: "%win10sdk%/x64/signtool.exe"
   CARGO_MAKE_VERSION: 0.35.13
   CARGO_INCREMENTAL: 0
@@ -66,6 +66,7 @@ jobs:
               brew install capnp llvm
           elif [ "$RUNNER_OS" == "Windows" ]; then
               choco install -y capnproto
+              echo "LIBCLANG_PATH=${{ env.LIBCLANG_PATH_WIN }}" >> $GITHUB_ENV
           fi
 
       - name: Pull Git LFS objects
@@ -144,8 +145,7 @@ jobs:
           version: ${{ env.CARGO_MAKE_VERSION }}
 
       - name: Install Dependencies.
-        run: |
-          sudo apt-get update && sudo apt-get install -y capnproto libudev-dev libssl-dev
+        run: sudo apt-get update && sudo apt-get install -y capnproto libudev-dev libssl-dev
 
       - name: Cache pip
         uses: actions/cache@v2
@@ -171,14 +171,12 @@ jobs:
           setup-python: false
 
       - name: Run Checks
-        run: |
-          cargo make check-all
+        run: cargo make check-all
 
       # TODO Fix qmllint warnings [CPP-798]
       - name: Run qmllint
         continue-on-error: true
-        run: |
-          cargo make qml-lint
+        run: cargo make qml-lint
 
       - name: Run Tests
         uses: nick-invision/retry@v2
@@ -260,6 +258,7 @@ jobs:
               brew install capnp llvm create-dmg
           elif [ "$RUNNER_OS" == "Windows" ]; then
               choco install capnproto nsis
+              echo "LIBCLANG_PATH=${{ env.LIBCLANG_PATH_WIN }}" >> $GITHUB_ENV
           fi
 
       - name: Install stable Rust
@@ -279,8 +278,7 @@ jobs:
 
       - name: Install ImageMagick
         shell: bash
-        run: |
-          cargo make install-imagemagick
+        run: cargo make install-imagemagick
 
       - name: Cache pip
         uses: actions/cache@v2
@@ -295,20 +293,17 @@ jobs:
 
       - name: Set up python builder
         shell: bash
-        run: |
-          cargo make setup-builder
+        run: cargo make setup-builder
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Store git tag vars.
         shell: bash
-        run: |
-          echo "VERSION=${GITHUB_REF##*/}" >> $GITHUB_ENV
+        run: echo "VERSION=${GITHUB_REF##*/}" >> $GITHUB_ENV
 
       - name: Build ${{ runner.os }} Binaries.
         shell: bash
-        run: |
-          cargo make create-dist
+        run: cargo make create-dist
 
       - name: Create ${{ runner.os }} Installers.
         shell: bash
@@ -327,16 +322,13 @@ jobs:
         if: github.event_name == 'push' && contains(github.ref, 'refs/tags') && runner.os == 'Linux'
 
       - name: Build ${{ runner.os }} swift-files binary.
-        run: |
-          cargo build --release --bin swift-files --no-default-features --features env_logger,indicatif
+        run: cargo build --release --bin swift-files --no-default-features --features env_logger,indicatif
 
       - name: Build ${{ runner.os }} swift-settings binary.
-        run: |
-          cargo build --release --bin swift-settings --no-default-features --features env_logger
+        run: cargo build --release --bin swift-settings --no-default-features --features env_logger
 
       - name: Build ${{ runner.os }} swift-updater binary.
-        run: |
-          cargo build --release --bin swift-updater --no-default-features
+        run: cargo build --release --bin swift-updater --no-default-features
 
       - name: Pull Git LFS objects
         run: git lfs pull
@@ -403,8 +395,7 @@ jobs:
           OS_NAME: ${{ runner.os }}
         shell: bash
         continue-on-error: true
-        run: |
-          cargo make disk-usage-bench
+        run: cargo make disk-usage-bench
 
   sign_application:
     name: Sign Application
@@ -423,8 +414,7 @@ jobs:
       - name: Remove previous build.
         shell: bash
         continue-on-error: true
-        run: |
-          rm -rf application
+        run: rm -rf application
 
       - name: Checkout source.
         uses: actions/checkout@v2
@@ -435,8 +425,7 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: ${{ matrix.os }}-artifacts
-          path: |
-            application
+          path: application
 
       - name: Unzip release artifact.
         shell: bash
@@ -696,14 +685,12 @@ jobs:
     steps:
       - name: Store git tag vars.
         shell: bash
-        run: |
-          echo "VERSION=${GITHUB_REF##*/}" >> $GITHUB_ENV
+        run: echo "VERSION=${GITHUB_REF##*/}" >> $GITHUB_ENV
 
       - name: Remove previous build.
         shell: bash
         continue-on-error: true
-        run: |
-          rm -rf binaries
+        run: rm -rf binaries
 
       - uses: actions/download-artifact@v2
         with:
@@ -786,8 +773,7 @@ jobs:
       - name: Zip Binaries.
         shell: bash
         working-directory: ${{ matrix.os.short_name }}
-        run: |
-          7z a -tzip "../swift-binaries_${{ matrix.os.short_name }}_${{ env.VERSION }}-all.zip"
+        run: 7z a -tzip "../swift-binaries_${{ matrix.os.short_name }}_${{ env.VERSION }}-all.zip"
 
       - uses: actions/upload-artifact@v2
         with:
